Fix automation action selector popup on small devices
[MAILPOET-5184]

--- a/mailpoet/assets/css/src/components-automation-editor/_automation.scss
+++ b/mailpoet/assets/css/src/components-automation-editor/_automation.scss
@@ -9,6 +9,11 @@
 
 .mailpoet-automation-editor-automation-wrapper {
   padding: 0 20px 50px;
+
+  // Fix for action selector popup on small devices
+  .components-popover__content {
+    min-width: 280px;
+  }
 }
 
 .mailpoet-automation-editor-automation-flow {
